--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Habit Tracker</title>
   </head>
   <body>
     <div id="main"></div>
-    <script src="index.js"></script>
+    <script src="index.jsx"></script>
   </body>
 </html>
